--- a/css/main.css
+++ b/css/main.css
@@ -47,9 +47,13 @@ header div
     font-size:4em;
     text-align:right;
 }
-header div span
+header div span:first-of-type
 {
     color:#ffff00;
+}
+header div span:last-of-type
+{
+    font-size:0.4em;
 }
 /*Main Section*/
 main
